--- a/main.css
+++ b/main.css
@@ -231,3 +231,9 @@ header{
 .brands .single-item{
   box-shadow: 0px 2px 6.5px -1px rgba(19, 16, 34, 0.03), 0px 4.5px 12px -1px rgba(19, 16, 34, 0.06);
 }
+
+/*-------------------- mobile-app-2 > banner ----------------*/
+.mobile-app-banner{
+  background: url('../src/images/banner/mobile-banner-2.png') no-repeat center;
+  background-size: cover;
+}
