--- a/main.css
+++ b/main.css
@@ -348,33 +348,34 @@ header{
   }
 }
 
-/*-------------------- travel-agency > banner ----------------*/
-.mySwiper{
-  height: 100vh;
+/*-------------------- travel-agency > trending ----------------*/
+.travel-trending .single-item{
+  box-shadow: 0px 4px 9px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 20px -1px rgba(19, 16, 34, 0.05);
 }
 
-.mySwiper .swiper-slide{
+/*-------------------- travel-agency > banner ----------------*/
+.travel-banner{
+  background: url('../src/images/banner/travel-desert.png') no-repeat center;
+  background-size: cover;
+}
+
+.travel-banner .swiper-pagination-progressbar-fill{
+  @apply bg-secondary;
+}
+
+.travel-banner-slider .swiper-slide{
   position: relative;
 }
-.mySwiper img {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-   background-size: cover;
-   background-position: center  center;
-   background-repeat: no-repeat;
-transition: 1.5s all;
+.travel-banner-slider img {
+  @apply absolute inset-0 bg-cover bg-center bg-no-repeat transition-all duration-1000;
 }
 
-.mySwiper .swiper-slide-active img {
-		animation: scale 5s ease forwards;
+.travel-banner-slider .swiper-slide-active img {
+	animation: scale 3s ease forwards;
 }
 
-.mySwiper2 .swiper-slide.swiper-slide-active{
-  display: none;
-  /* animation: scalethumb 5s ease forwards; */
+.travel-banner-thumb .swiper-slide.swiper-slide-active{
+  @apply hidden;
 }
 
 @keyframes scale {
@@ -385,58 +386,4 @@ transition: 1.5s all;
     100% {
          transform: scale(1);
     }
-}
-@keyframes scalethumb {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-        visibility: visible;
-    }
-
-    100% {
-         transform: scale(2);
-         opacity: 0;
-         visibility: hidden;
-    }
-}
-
-.swiper-progress-bar{
-	width: 600px;
-    height: 4px;
-	position: relative;
-	background: #eeeeee;
-	
-	
-}
-.progress{
-  height: inherit;
-  left: 0;
-  top: 0;
-  position: absolute;
-  background: #007aff;
-  z-index: 1;
-}
-.progress-sections{
-  left: 0;
-  top: 0;
-  position: absolute;
-  height: inherit;
-  width: inherit;
-  z-index: 2;
-  display: flex;
-  flex-direction: row;
-}
-
-.progress-sections span{
-  flex: 1;
-  height: inherit;
-  border-right: 2px solid #eee;
-}
-
-.progress-sections span:last-child{
-  border-right-width: 0;
-}
-.swiper-counter{
-	width: 600px;
-	margin: 0 auto;
 }
